--- a/frontEnd/css/style.css
+++ b/frontEnd/css/style.css
@@ -36,15 +36,106 @@ nav{
 #adminPage{
   background: purple;
 }
-#loginForm{
-  background: red;
-}
-#registerForm{
-  background: purple;
-}
+
 li{
   list-style: none;
 }
+
+/* Login overlay begins! */
+.login-overlay {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background: white;
+  margin: auto;
+  left:0;
+  top:0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.user-login {
+  width: 400px;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-control {
+  border-radius: 0;
+  background: none;
+  width: 300px;
+}
+
+.login-buttons {
+  width: 75%;
+  display: flex;
+  justify-content: space-between;
+
+
+}
+
+.login-btn {
+  background-color:#1b1b1b;
+  border:none;
+  color: white;
+  text-align: center;
+  width: 100px;
+  height: auto;
+  padding: 10px 0;
+  cursor: pointer;
+}
+.register-btn {
+  background-color: white;
+  border: 1px solid #1b1b1b;
+  color: white;
+  text-align: center;
+  width: 100px;
+  height: auto;
+  padding: 10px 0;
+  cursor: pointer;
+  color: #1b1b1b;
+}
+
+/* Register Overlay */
+.register-overlay {
+  display: none;
+  width: 400px;
+  height: 500px;
+  position: fixed;
+  background: white;
+  z-index: 1000;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.exit-register-btn {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: flex-end;
+  font-size: 20px
+}
+
+.register-form {
+  margin-top: -50px;
+}
+
+.register-exit {
+  padding: 15px;
+  cursor: pointer;
+  color: #1b1b1b;
+}
+
+
+
+
+/* Login overlay ends! */
+
+
 
 
 
@@ -55,6 +146,11 @@ li{
   padding:20px;
   border-bottom:1px solid #9c9c9c;
 }
+
+
+
+
+
 
 .up-del {
   display: flex;
