--- a/frontEnd/css/style.css
+++ b/frontEnd/css/style.css
@@ -2,51 +2,112 @@
 h1, h2{
   font-family: sans-serif;
 }
-#heading{
+a {
+  text-decoration: none;
+}
+.heading{
   position: relative;
   display: inline-block;
   background: purple;
   margin-bottom: 20px;
   text-transform: uppercase;
 }
+
+/* new homePage section */
 nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height:7rem;
+  height:130px;
   border-bottom: 5px solid #1b1b1b;
+}
+.homePageSection{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height:80px;
+  border-bottom: 5px solid #1b1b1b;
+}
+.home-projects{
+  height:60px;
+  border-bottom: 5px solid #1b1b1b;
+}
+.link-admin{
+  text-align: center;
+  color: #1b1b1b;
+  border: 2px solid #1b1b1b;
+  width:200px;
+  height: auto;
+  padding: 20px 0;
+  cursor:pointer;
+}
+.link-admin:hover
+{
+  background: #1b1b1b;
+  color: #f7f7f7;
+}
+/* .my-btn:hover{
+  background: #f7f7f7;
+  color: #1b1b1b;
+  border: 2px solid #1b1b1b;
+} */
+.accordion-title{
+  font-size: 100px;
+  text-align: left;
+}
+.accordion-item{
+  border-bottom: 5px solid #1b1b1b;
+}
+#accordianBtn{
+  border: none;
+  background-color: #fff;
+  width: 1115px;
+}
+.accordion-body{
+  display: inline-block;
+  width: 700px;
+}
+.item1{
+  display: inline-block;
+  border: 2px solid black;
+  width: 180px;
+  height: 180px;
+}
+.item2{
+  display: inline-block;
+  border: 2px solid black;
+  margin-left: 10px;
+  width: 180px;
+  height: 180px;
+}
 
-}
-#homePage{
-  background: purple;
-  margin-bottom: 20px;
-}
-#addProductForm{
+
+/* original home page */
+.addProductForm{
   background: red;
   margin-bottom: 20px;
 }
-#inputIdDiv{
+.inputIdDiv{
   background: purple;
   margin-bottom: 20px;
 }
-#delForm{
+.delForm{
   background: red;
   margin-bottom: 20px;
 }
-#adminPage{
+.adminPage{
   background: purple;
 }
-#loginForm{
+.loginForm{
   background: red;
 }
-#registerForm{
+.registerForm{
   background: purple;
 }
+/* original home page ENDS */
 li{
   list-style: none;
 }
-
-
 
 .project-strip {
   height:60px;
@@ -89,6 +150,7 @@ div#projectList > div:first-child {
   padding: 20px 0;
   cursor: pointer;
 }
+
 
 #addProjectForm, #delProjectForm, #updateProjectForm  {
   display: none;
