--- a/frontEnd/css/style.css
+++ b/frontEnd/css/style.css
@@ -75,7 +75,7 @@ nav{
 }
 .item2{
   display: inline-block;
-  border: 2px solid black;
+  border: 2px solid #1b1b1b;
   margin-left: 10px;
   width: 180px;
   height: 180px;
@@ -200,12 +200,6 @@ li{
 
 
 /* Login overlay ends! */
-
-
-
-
-
->>>>>>> e52db0b3511a58338d89f82e7f8e686402b92597
 .project-strip {
   height:60px;
   display: flex;
@@ -213,12 +207,6 @@ li{
   padding:20px;
   border-bottom:1px solid #9c9c9c;
 }
-
-
-
-
-
-
 .up-del {
   display: flex;
   gap:30px;
@@ -256,12 +244,9 @@ div#projectList > div:first-child {
   cursor: pointer;
 }
 
-<<<<<<< HEAD
-=======
 .fa{
-  color:black;
+  color:#1b1b1b;
 }
->>>>>>> e52db0b3511a58338d89f82e7f8e686402b92597
 
 #addProjectForm, #delProjectForm, #updateProjectForm  {
   display: none;
