--- a/frontEnd/css/style.css
+++ b/frontEnd/css/style.css
@@ -1,4 +1,10 @@
+/* colours
+black #1b1b1b
+white #f4ead1 */
 
+body{
+  background-color: #f4ead1;
+}
 h1, h2{
   font-family: sans-serif;
 }
@@ -6,13 +12,13 @@ a {
   text-decoration: none;
 }
 
-.heading{
+/* .heading{
   position: relative;
   display: inline-block;
   background: purple;
   margin-bottom: 20px;
   text-transform: uppercase;
-}
+} */
 /* new homePage section */
 nav{
   display: flex;
@@ -21,17 +27,14 @@ nav{
   height:130px;
   border-bottom: 5px solid #1b1b1b;
 }
-.homePageSection{
+/* .homePageSection{
   display: flex;
   justify-content: space-between;
   align-items: center;
   height:80px;
   border-bottom: 5px solid #1b1b1b;
-}
-.home-projects{
-  height:60px;
-  border-bottom: 5px solid #1b1b1b;
-}
+} */
+
 .link-admin{
   text-align: center;
   color: #1b1b1b;
@@ -46,6 +49,10 @@ nav{
   background: #1b1b1b;
   color: #f7f7f7;
 }
+.home-projects{
+  height:60px;
+  border-bottom: 5px solid #1b1b1b;
+}
 .accordian{
   border: none;
   box-shadow:none;
@@ -58,10 +65,11 @@ nav{
   border: none;
   border-radius:none;
   border-bottom: 5px solid #1b1b1b;
+  background-color: #f4ead1;
 }
 #accordionBtn{
   border: none;
-  background-color: #fff;
+  background-color: #f4ead1;
   box-shadow:none;
 }
 .accordion-title{
@@ -81,9 +89,8 @@ nav{
     width: 0;  /* Remove scrollbar space */
     background: transparent;  /* Optional: just make scrollbar invisible */
 }
-/* Optional: show position indicator in red */
 ::-webkit-scrollbar-thumb {
-    background: #FF0000;
+    background: #f4ead1;
 }
 .about{
   border-bottom: 3px solid #1b1b1b;
@@ -99,15 +106,18 @@ nav{
   margin-top: 20px;
 }
 .description{
+  position: relative;
   display: inline-block;
   width: 400px;
 }
 .item1{
   display: inline-block;
-  border: 2px solid black;
-  width: 600px;
+  float: right;
+  border: none;
+  border-radius:none;
+  width: 500px;
   height: 300px;
-  margin-left: 50px;
+  margin-left: 140px;
 }
 
 
@@ -152,7 +162,7 @@ input {
 .add-project-btn {
   background-color:#1b1b1b;
   border:none;
-  color: white;
+  color: #f4ead1;
   text-align: center;
   width: 150px;
   height: auto;
@@ -166,7 +176,7 @@ input {
   position: fixed;
   height: 100%;
   width: 100%;
-  background: white;
+  background: #f4ead1;
   margin: auto;
   left:0;
   top:0;
@@ -202,7 +212,7 @@ input {
 .login-btn {
   background-color:#1b1b1b;
   border:none;
-  color: white;
+  color: #f4ead1;
   text-align: center;
   width: 100px;
   height: auto;
@@ -210,9 +220,9 @@ input {
   cursor: pointer;
 }
 .register-btn {
-  background-color: white;
+  background-color: #f4ead1;
   border: 1px solid #1b1b1b;
-  color: white;
+  color: #f4ead1;
   text-align: center;
   width: 100px;
   height: auto;
@@ -227,7 +237,7 @@ input {
   width: 400px;
   height: 500px;
   position: fixed;
-  background: white;
+  background: #f4ead1;
   z-index: 1000;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
