--- a/frontEnd/css/style.css
+++ b/frontEnd/css/style.css
@@ -1,4 +1,11 @@
 
+body {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+
+}
+
 h1, h2{
   font-family: sans-serif;
 }
@@ -55,14 +62,19 @@ nav{
   color: #f7f7f7;
 }
 
-#accordionExample {
+.accordion {
   border: none;
+  border-radius: none;
 }
+
 .accordion-item{
+  border: none;
+  border-radius: none;
   border-bottom: 5px solid #1b1b1b;
 }
-#accordianBtn{
+.accordian-btn {
   border: none;
+  border-radius: none;
   background-color: #fff;
   width: 1115px;
 }
@@ -72,11 +84,15 @@ nav{
   border: none;
   height:110px;
 }
+
 .accordion-body{
   display: inline-block;
+  border-radius: none;
   height:500px;
   overflow: scroll;
+  border-radius: none;
   overflow-x: hidden;
+  border: none;
 }
 ::-webkit-scrollbar {
     width: 0;  /* Remove scrollbar space */
@@ -85,6 +101,10 @@ nav{
 /* Optional: show position indicator in red */
 ::-webkit-scrollbar-thumb {
     background: #FF0000;
+}
+
+.collapse {
+  border-radius: none;
 }
 .about{
   border-bottom: 3px solid #1b1b1b;
@@ -108,6 +128,11 @@ nav{
   height: 300px;
   margin-left: 50px;
 }
+
+button {
+  border: none;
+}
+
 
 
 /* original home page */
